--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="preloader" class="preloader">
       <img src="preloader.gif" alt="" />
